SonarValidator_Prober/parser/generated/NftablesRuleParser.cpp

// Generated from /home/osboxes/IdeaProjects/SonarValidator/SonarValidator_Prober/parser/grammar/NftablesRule.g4 by ANTLR 4.13.1


#include "NftablesRuleVisitor.h"

#include "NftablesRuleParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct NftablesRuleParserStaticData final {
  NftablesRuleParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  NftablesRuleParserStaticData(const NftablesRuleParserStaticData&) = delete;
  NftablesRuleParserStaticData(NftablesRuleParserStaticData&&) = delete;
  NftablesRuleParserStaticData& operator=(const NftablesRuleParserStaticData&) = delete;
  NftablesRuleParserStaticData& operator=(NftablesRuleParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag nftablesruleParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
NftablesRuleParserStaticData *nftablesruleParserStaticData = nullptr;

void nftablesruleParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (nftablesruleParserStaticData != nullptr) {
    return;
  }
#else
  assert(nftablesruleParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<NftablesRuleParserStaticData>(
    std::vector<std::string>{
      "rulesetDocument", "chainDocument", "rulesetItem", "chainItem", "tableBlock", 
      "bodyBlock", "familyBlock", "tableName", "chainBlock", "chainBody", 
      "chainName", "chainAttr", "nameToken", "ruleLine", "rulePiece", "genericLine", 
      "blank", "elem"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "'table'", "'chain'", "'{'", "'}'", "';'", 
      "'/'", "':'"
    },
    std::vector<std::string>{
      "", "ATTRKEY", "MATCHKEY", "ACTION", "NEWLINE", "WS", "TABLE", "CHAIN", 
      "OPEN_BRACE", "CLOSE_BRACE", "SEMICOLON", "SLASH", "COLON", "ADDR", 
      "NUMBER", "DASHED_IDENT", "QUOTED", "IDENT", "RULEWORD"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  nftablesruleParserStaticData = staticData.release();
}

}

NftablesRuleParser::NftablesRuleParser(TokenStream *input) : NftablesRuleParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

NftablesRuleParser::NftablesRuleParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  NftablesRuleParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *nftablesruleParserStaticData->atn, nftablesruleParserStaticData->decisionToDFA, nftablesruleParserStaticData->sharedContextCache, options);
}

NftablesRuleParser::~NftablesRuleParser() {
  delete _interpreter;
}

const atn::ATN& NftablesRuleParser::getATN() const {
  return *nftablesruleParserStaticData->atn;
}

std::string NftablesRuleParser::getGrammarFileName() const {
  return "NftablesRule.g4";
}

const std::vector<std::string>& NftablesRuleParser::getRuleNames() const {
  return nftablesruleParserStaticData->ruleNames;
}

const dfa::Vocabulary& NftablesRuleParser::getVocabulary() const {
  return nftablesruleParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView NftablesRuleParser::getSerializedATN() const {
  return nftablesruleParserStaticData->serializedATN;
}


//----------------- RulesetDocumentContext ------------------------------------------------------------------

NftablesRuleParser::RulesetDocumentContext::RulesetDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NftablesRuleParser::RulesetDocumentContext::EOF() {
  return getToken(NftablesRuleParser::EOF, 0);
}

std::vector<NftablesRuleParser::RulesetItemContext *> NftablesRuleParser::RulesetDocumentContext::rulesetItem() {
  return getRuleContexts<NftablesRuleParser::RulesetItemContext>();
}

NftablesRuleParser::RulesetItemContext* NftablesRuleParser::RulesetDocumentContext::rulesetItem(size_t i) {
  return getRuleContext<NftablesRuleParser::RulesetItemContext>(i);
}


size_t NftablesRuleParser::RulesetDocumentContext::getRuleIndex() const {
  return NftablesRuleParser::RuleRulesetDocument;
}


std::any NftablesRuleParser::RulesetDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NftablesRuleVisitor*>(visitor))
    return parserVisitor->visitRulesetDocument(this);
  else
    return visitor->visitChildren(this);
}

NftablesRuleParser::RulesetDocumentContext* NftablesRuleParser::rulesetDocument() {
  RulesetDocumentContext *_localctx = _tracker.createInstance<RulesetDocumentContext>(_ctx, getState());
  enterRule(_localctx, 0, NftablesRuleParser::RuleRulesetDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(39);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 523518) != 0)) {
      setState(36);
      rulesetItem();
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(42);
    match(NftablesRuleParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChainDocumentContext ------------------------------------------------------------------

NftablesRuleParser::ChainDocumentContext::ChainDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NftablesRuleParser::ChainDocumentContext::EOF() {
  return getToken(NftablesRuleParser::EOF, 0);
}

std::vector<NftablesRuleParser::ChainItemContext *> NftablesRuleParser::ChainDocumentContext::chainItem() {
  return getRuleContexts<NftablesRuleParser::ChainItemContext>();
}

NftablesRuleParser::ChainItemContext* NftablesRuleParser::ChainDocumentContext::chainItem(size_t i) {
  return getRuleContext<NftablesRuleParser::ChainItemContext>(i);
}


size_t NftablesRuleParser::ChainDocumentContext::getRuleIndex() const {
  return NftablesRuleParser::RuleChainDocument;
}


std::any NftablesRuleParser::ChainDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NftablesRuleVisitor*>(visitor))
    return parserVisitor->visitChainDocument(this);
  else
    return visitor->visitChildren(this);
}

NftablesRuleParser::ChainDocumentContext* NftablesRuleParser::chainDocument() {
  ChainDocumentContext *_localctx = _tracker.createInstance<ChainDocumentContext>(_ctx, getState());
  enterRule(_localctx, 2, NftablesRuleParser::RuleChainDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 523518) != 0)) {
      setState(44);
      chainItem();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(50);
    match(NftablesRuleParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RulesetItemContext ------------------------------------------------------------------

NftablesRuleParser::RulesetItemContext::RulesetItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NftablesRuleParser::TableBlockContext* NftablesRuleParser::RulesetItemContext::tableBlock() {
  return getRuleContext<NftablesRuleParser::TableBlockContext>(0);
}

NftablesRuleParser::GenericLineContext* NftablesRuleParser::RulesetItemContext::genericLine() {
  return getRuleContext<NftablesRuleParser::GenericLineContext>(0);
}

NftablesRuleParser::BlankContext* NftablesRuleParser::RulesetItemContext::blank() {
  return getRuleContext<NftablesRuleParser::BlankContext>(0);
}


size_t NftablesRuleParser::RulesetItemContext::getRuleIndex() const {
  return NftablesRuleParser::RuleRulesetItem;
}


std::any NftablesRuleParser::RulesetItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NftablesRuleVisitor*>(visitor))
    return parserVisitor->visitRulesetItem(this);
  else
    return visitor->visitChildren(this);
}

NftablesRuleParser::RulesetItemContext* NftablesRuleParser::rulesetItem() {
  RulesetItemContext *_localctx = _tracker.createInstance<RulesetItemContext>(_ctx, getState());
  enterRule(_localctx, 4, NftablesRuleParser::RuleRulesetItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(55);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(52);
      tableBlock();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(53);
      genericLine();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(54);
      blank();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChainItemContext ------------------------------------------------------------------

NftablesRuleParser::ChainItemContext::ChainItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NftablesRuleParser::ChainAttrContext* NftablesRuleParser::ChainItemContext::chainAttr() {
  return getRuleContext<NftablesRuleParser::ChainAttrContext>(0);
}

NftablesRuleParser::RuleLineContext* NftablesRuleParser::ChainItemContext::ruleLine() {
  return getRuleContext<NftablesRuleParser::RuleLineContext>(0);
}

NftablesRuleParser::GenericLineContext* NftablesRuleParser::ChainItemContext::genericLine() {
  return getRuleContext<NftablesRuleParser::GenericLineContext>(0);
}

NftablesRuleParser::BlankContext* NftablesRuleParser::ChainItemContext::blank() {
  return getRuleContext<NftablesRuleParser::BlankContext>(0);
}


size_t NftablesRuleParser::ChainItemContext::getRuleIndex() const {
  return NftablesRuleParser::RuleChainItem;
}


std::any NftablesRuleParser::ChainItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NftablesRuleVisitor*>(visitor))
    return parserVisitor->visitChainItem(this);
  else
    return visitor->visitChildren(this);
}

NftablesRuleParser::ChainItemContext* NftablesRuleParser::chainItem() {
  ChainItemContext *_localctx = _tracker.createInstance<ChainItemContext>(_ctx, getState());
  enterRule(_localctx, 6, NftablesRuleParser::RuleChainItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(61);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(57);
      chainAttr();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(58);
      ruleLine();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(59);
      genericLine();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(60);
      blank();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TableBlockContext ------------------------------------------------------------------

NftablesRuleParser::TableBlockContext::TableBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NftablesRuleParser::TableBlockContext::TABLE() {
  return getToken(NftablesRuleParser::TABLE, 0);
}

NftablesRuleParser::FamilyBlockContext* NftablesRuleParser::TableBlockContext::familyBlock() {
  return getRuleContext<NftablesRuleParser::FamilyBlockContext>(0);
}

NftablesRuleParser::TableNameContext* NftablesRuleParser::TableBlockContext::tableName() {
  return getRuleContext<NftablesRuleParser::TableNameContext>(0);
}

tree::TerminalNode* NftablesRuleParser::TableBlockContext::OPEN_BRACE() {
  return getToken(NftablesRuleParser::OPEN_BRACE, 0);
}

std::vector<tree::TerminalNode *> NftablesRuleParser::TableBlockContext::NEWLINE() {
  return getTokens(NftablesRuleParser::NEWLINE);
}

tree::TerminalNode* NftablesRuleParser::TableBlockContext::NEWLINE(size_t i) {
  return getToken(NftablesRuleParser::NEWLINE, i);
}

tree::TerminalNode* NftablesRuleParser::TableBlockContext::CLOSE_BRACE() {
  return getToken(NftablesRuleParser::CLOSE_BRACE, 0);
}

std::vector<NftablesRuleParser::BodyBlockContext *> NftablesRuleParser::TableBlockContext::bodyBlock() {
  return getRuleContexts<NftablesRuleParser::BodyBlockContext>();
}

NftablesRuleParser::BodyBlockContext* NftablesRuleParser::TableBlockContext::bodyBlock(size_t i) {
  return getRuleContext<NftablesRuleParser::BodyBlockContext>(i);
}


size_t NftablesRuleParser::TableBlockContext::getRuleIndex() const {
  return NftablesRuleParser::RuleTableBlock;
}


std::any NftablesRuleParser::TableBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NftablesRuleVisitor*>(visitor))
    return parserVisitor->visitTableBlock(this);
  else
    return visitor->visitChildren(this);
}

NftablesRuleParser::TableBlockContext* NftablesRuleParser::tableBlock() {
  TableBlockContext *_localctx = _tracker.createInstance<TableBlockContext>(_ctx, getState());
  enterRule(_localctx, 8, NftablesRuleParser::RuleTableBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(NftablesRuleParser::TABLE);
    setState(64);
    familyBlock();
    setState(65);
    tableName();
    setState(66);
    match(NftablesRuleParser::OPEN_BRACE);
    setState(67);
    match(NftablesRuleParser::NEWLINE);
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 523518) != 0)) {
      setState(68);
      bodyBlock();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    match(NftablesRuleParser::CLOSE_BRACE);
    setState(76);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(75);
      match(NftablesRuleParser::NEWLINE);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BodyBlockContext ------------------------------------------------------------------

NftablesRuleParser::BodyBlockContext::BodyBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NftablesRuleParser::ChainBlockContext* NftablesRuleParser::BodyBlockContext::chainBlock() {
  return getRuleContext<NftablesRuleParser::ChainBlockContext>(0);
}

NftablesRuleParser::GenericLineContext* NftablesRuleParser::BodyBlockContext::genericLine() {
  return getRuleContext<NftablesRuleParser::GenericLineContext>(0);
}

NftablesRuleParser::BlankContext* NftablesRuleParser::BodyBlockContext::blank() {
  return getRuleContext<NftablesRuleParser::BlankContext>(0);
}


size_t NftablesRuleParser::BodyBlockContext::getRuleIndex() const {
  return NftablesRuleParser::RuleBodyBlock;
}


std::any NftablesRuleParser::BodyBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NftablesRuleVisitor*>(visitor))
    return parserVisitor->visitBodyBlock(this);
  else
    return visitor->visitChildren(this);
}

NftablesRuleParser::BodyBlockContext* NftablesRuleParser::bodyBlock() {
  BodyBlockContext *_localctx = _tracker.createInstance<BodyBlockContext>(_ctx, getState());
  enterRule(_localctx, 10, NftablesRuleParser::RuleBodyBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(81);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(78);
      chainBlock();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(79);
      genericLine();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(80);
      blank();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FamilyBlockContext ------------------------------------------------------------------

NftablesRuleParser::FamilyBlockContext::FamilyBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NftablesRuleParser::NameTokenContext* NftablesRuleParser::FamilyBlockContext::nameToken() {
  return getRuleContext<NftablesRuleParser::NameTokenContext>(0);
}


size_t NftablesRuleParser::FamilyBlockContext::getRuleIndex() const {
  return NftablesRuleParser::RuleFamilyBlock;
}


std::any NftablesRuleParser::FamilyBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NftablesRuleVisitor*>(visitor))
    return parserVisitor->visitFamilyBlock(this);
  else
    return visitor->visitChildren(this);
}

NftablesRuleParser::FamilyBlockContext* NftablesRuleParser::familyBlock() {
  FamilyBlockContext *_localctx = _tracker.createInstance<FamilyBlockContext>(_ctx, getState());
  enterRule(_localctx, 12, NftablesRuleParser::RuleFamilyBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    nameToken();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TableNameContext ------------------------------------------------------------------

NftablesRuleParser::TableNameContext::TableNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NftablesRuleParser::NameTokenContext* NftablesRuleParser::TableNameContext::nameToken() {
  return getRuleContext<NftablesRuleParser::NameTokenContext>(0);
}


size_t NftablesRuleParser::TableNameContext::getRuleIndex() const {
  return NftablesRuleParser::RuleTableName;
}


std::any NftablesRuleParser::TableNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NftablesRuleVisitor*>(visitor))
    return parserVisitor->visitTableName(this);
  else
    return visitor->visitChildren(this);
}

NftablesRuleParser::TableNameContext* NftablesRuleParser::tableName() {
  TableNameContext *_localctx = _tracker.createInstance<TableNameContext>(_ctx, getState());
  enterRule(_localctx, 14, NftablesRuleParser::RuleTableName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    nameToken();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChainBlockContext ------------------------------------------------------------------

NftablesRuleParser::ChainBlockContext::ChainBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NftablesRuleParser::ChainBlockContext::CHAIN() {
  return getToken(NftablesRuleParser::CHAIN, 0);
}

NftablesRuleParser::ChainNameContext* NftablesRuleParser::ChainBlockContext::chainName() {
  return getRuleContext<NftablesRuleParser::ChainNameContext>(0);
}

tree::TerminalNode* NftablesRuleParser::ChainBlockContext::OPEN_BRACE() {
  return getToken(NftablesRuleParser::OPEN_BRACE, 0);
}

std::vector<tree::TerminalNode *> NftablesRuleParser::ChainBlockContext::NEWLINE() {
  return getTokens(NftablesRuleParser::NEWLINE);
}

tree::TerminalNode* NftablesRuleParser::ChainBlockContext::NEWLINE(size_t i) {
  return getToken(NftablesRuleParser::NEWLINE, i);
}

tree::TerminalNode* NftablesRuleParser::ChainBlockContext::CLOSE_BRACE() {
  return getToken(NftablesRuleParser::CLOSE_BRACE, 0);
}

std::vector<NftablesRuleParser::ChainBodyContext *> NftablesRuleParser::ChainBlockContext::chainBody() {
  return getRuleContexts<NftablesRuleParser::ChainBodyContext>();
}

NftablesRuleParser::ChainBodyContext* NftablesRuleParser::ChainBlockContext::chainBody(size_t i) {
  return getRuleContext<NftablesRuleParser::ChainBodyContext>(i);
}


size_t NftablesRuleParser::ChainBlockContext::getRuleIndex() const {
  return NftablesRuleParser::RuleChainBlock;
}


std::any NftablesRuleParser::ChainBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NftablesRuleVisitor*>(visitor))
    return parserVisitor->visitChainBlock(this);
  else
    return visitor->visitChildren(this);
}

NftablesRuleParser::ChainBlockContext* NftablesRuleParser::chainBlock() {
  ChainBlockContext *_localctx = _tracker.createInstance<ChainBlockContext>(_ctx, getState());
  enterRule(_localctx, 16, NftablesRuleParser::RuleChainBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(NftablesRuleParser::CHAIN);
    setState(88);
    chainName();
    setState(89);
    match(NftablesRuleParser::OPEN_BRACE);
    setState(90);
    match(NftablesRuleParser::NEWLINE);
    setState(94);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 523518) != 0)) {
      setState(91);
      chainBody();
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(97);
    match(NftablesRuleParser::CLOSE_BRACE);
    setState(99);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(98);
      match(NftablesRuleParser::NEWLINE);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChainBodyContext ------------------------------------------------------------------

NftablesRuleParser::ChainBodyContext::ChainBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NftablesRuleParser::ChainAttrContext* NftablesRuleParser::ChainBodyContext::chainAttr() {
  return getRuleContext<NftablesRuleParser::ChainAttrContext>(0);
}

NftablesRuleParser::RuleLineContext* NftablesRuleParser::ChainBodyContext::ruleLine() {
  return getRuleContext<NftablesRuleParser::RuleLineContext>(0);
}

NftablesRuleParser::GenericLineContext* NftablesRuleParser::ChainBodyContext::genericLine() {
  return getRuleContext<NftablesRuleParser::GenericLineContext>(0);
}

NftablesRuleParser::BlankContext* NftablesRuleParser::ChainBodyContext::blank() {
  return getRuleContext<NftablesRuleParser::BlankContext>(0);
}


size_t NftablesRuleParser::ChainBodyContext::getRuleIndex() const {
  return NftablesRuleParser::RuleChainBody;
}


std::any NftablesRuleParser::ChainBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NftablesRuleVisitor*>(visitor))
    return parserVisitor->visitChainBody(this);
  else
    return visitor->visitChildren(this);
}

NftablesRuleParser::ChainBodyContext* NftablesRuleParser::chainBody() {
  ChainBodyContext *_localctx = _tracker.createInstance<ChainBodyContext>(_ctx, getState());
  enterRule(_localctx, 18, NftablesRuleParser::RuleChainBody);
